fixing margin on small devices

--- a/src/css/pricing.scss
+++ b/src/css/pricing.scss
@@ -27,7 +27,9 @@
     
     @media(max-width: 942px) {
         margin-bottom: 50px;
+        margin-right: 0;
     }
+
 }
 
 .card__top{
